<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.test.stampmap.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_myStamps"
        android:name="com.test.stampmap.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/activity_my_stamps" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.test.stampmap.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>