<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/settings_frag_container">

    <LinearLayout
            android:id="@+id/settings_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".Fragments.MyStampsChild.NotObtainedFragment">


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_settings"
                android:textSize="25sp"
                android:textAlignment="center"
                android:padding="10dp"

        />

        <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/filterClear"
                android:text="@string/clear_filters_on_search_cunt"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <Button
                android:id="@+id/cache_clear"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/settings_clear_image_cache"
                android:backgroundTint="@color/design_default_color_secondary"
        />

        <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/settings_check_for_updatess"
                android:textSize="20dp"
                android:id="@+id/update_btn"
        />


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_about"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/aboutPage"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_help"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/helpPage"
        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/settings_select_language"
            />
            <Spinner
                    android:id="@+id/language_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
            />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>